Fixed image stretch issue

--- a/public/assets/scss/elements/_portfolio.scss
+++ b/public/assets/scss/elements/_portfolio.scss
@@ -53,6 +53,7 @@
         top: 0;
         left: 0;
         height: 100%;
+        object-fit: cover;
         width: 100%;
         background-size: cover;
         background-position: center;
